docs: Splitting docs into API and Usage

--- a/doc/Usage.ipynb
+++ b/doc/Usage.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "## Table of Contents\n",
     "\n",
-    "1. [Top](#)\n",
+    "1. [Top](#ipfs-log)\n",
     "  1. [Intro](#Intro)\n",
     "  2. [Nomenclature and Concepts](#Nomenclature-and-Concepts)\n",
     "2. [Prerequisites](#Prerequisites)\n",
