milestone: Working docs

--- a/doc/Usage.ipynb
+++ b/doc/Usage.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,16 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "const AccessController = require('./src/default-access-controller')"
+    "const AccessController = require('../src/default-access-controller')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,9 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error: Lock FcntlFlock of /home/jovyan/.jsipfs/repo.lock failed: EAGAIN, Resource temporarily unavailable\n",
+      "    at fs.close (/home/jovyan/orbitdb/ipfs-log/node_modules/lock-me/src/unix.js:20:14)\n",
+      "    at /home/jovyan/orbitdb/ipfs-log/node_modules/graceful-fs/graceful-fs.js:43:10\n",
+      "    at FSReqWrap.oncomplete (fs.js:139:20)"
+     ]
+    }
+   ],
    "source": [
     "const IdentityProvider = require('orbit-db-identity-provider')\n",
     "const Keystore = require('orbit-db-keystore')"
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,9 +306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1542333975730'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "log.id"
    ]
@@ -311,9 +333,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "log2.length"
    ]
@@ -327,18 +360,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LamportClock {\n",
+       "  id:\n",
+       "   '04c5801bce297e36415cdc2c0d89a9e95435882a82ebbf62541a2ba22f8f0db59e11512051b56cb4a35faa7f5481e8abd0272092dd9049dd6674b5b5ac86211126',\n",
+       "  time: 0 }"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "log.clock"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LamportClock {\n",
+       "  id:\n",
+       "   '0427b450702fffa95e2715b3ab75c99df33377d8c463ce014878271ec802019a465ecf3fe39d255bbb49906413ebe1d863f16aa41799fb8464a9949728f8d95e35',\n",
+       "  time: 0 }"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "log2.clock"
    ]
@@ -356,9 +417,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Cannot find module './src/entry'",
+     "output_type": "error",
+     "traceback": [
+      "internal/modules/cjs/loader.js:583",
+      "    throw err;",
+      "    ^",
+      "",
+      "Error: Cannot find module './src/entry'",
+      "    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:581:15)",
+      "    at Function.Module._load (internal/modules/cjs/loader.js:507:25)",
+      "    at Module.require (internal/modules/cjs/loader.js:637:17)",
+      "    at require (internal/modules/cjs/helpers.js:20:18)",
+      "    at evalmachine.<anonymous>:1:15",
+      "    at Script.runInThisContext (vm.js:91:20)",
+      "    at Object.runInThisContext (vm.js:298:38)",
+      "    at run ([eval]:1002:15)",
+      "    at onRunRequest ([eval]:829:18)",
+      "    at onMessage ([eval]:789:13)"
+     ]
+    }
+   ],
    "source": [
     "const Entry = require(\"./src/entry\")\n",
     "const Clock = require('./src/lamport-clock')"
@@ -376,9 +460,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ReferenceError",
+     "evalue": "Entry is not defined",
+     "output_type": "error",
+     "traceback": [
+      "ReferenceError: Entry is not defined",
+      "    at evalmachine.<anonymous>:4:18",
+      "    at evalmachine.<anonymous>:7:3",
+      "    at Script.runInThisContext (vm.js:91:20)",
+      "    at Object.runInThisContext (vm.js:298:38)",
+      "    at run ([eval]:1002:15)",
+      "    at onRunRequest ([eval]:829:18)",
+      "    at onMessage ([eval]:789:13)",
+      "    at process.emit (events.js:182:13)",
+      "    at emit (internal/child_process.js:812:12)",
+      "    at process._tickCallback (internal/process/next_tick.js:63:19)"
+     ]
+    }
+   ],
    "source": [
     "let log3;\n",
     "\n",
@@ -391,18 +494,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Cannot read property 'length' of undefined",
+     "output_type": "error",
+     "traceback": [
+      "evalmachine.<anonymous>:1",
+      "log3.length",
+      "     ^",
+      "",
+      "TypeError: Cannot read property 'length' of undefined",
+      "    at evalmachine.<anonymous>:1:6",
+      "    at Script.runInThisContext (vm.js:91:20)",
+      "    at Object.runInThisContext (vm.js:298:38)",
+      "    at run ([eval]:1002:15)",
+      "    at onRunRequest ([eval]:829:18)",
+      "    at onMessage ([eval]:789:13)",
+      "    at process.emit (events.js:182:13)",
+      "    at emit (internal/child_process.js:812:12)",
+      "    at process._tickCallback (internal/process/next_tick.js:63:19)"
+     ]
+    }
+   ],
    "source": [
     "log3.length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Cannot read property 'clock' of undefined",
+     "output_type": "error",
+     "traceback": [
+      "evalmachine.<anonymous>:1",
+      "log3.clock",
+      "     ^",
+      "",
+      "TypeError: Cannot read property 'clock' of undefined",
+      "    at evalmachine.<anonymous>:1:6",
+      "    at Script.runInThisContext (vm.js:91:20)",
+      "    at Object.runInThisContext (vm.js:298:38)",
+      "    at run ([eval]:1002:15)",
+      "    at onRunRequest ([eval]:829:18)",
+      "    at onMessage ([eval]:789:13)",
+      "    at process.emit (events.js:182:13)",
+      "    at emit (internal/child_process.js:812:12)",
+      "    at process._tickCallback (internal/process/next_tick.js:63:19)"
+     ]
+    }
+   ],
    "source": [
     "log3.clock"
    ]
@@ -418,9 +565,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ReferenceError",
+     "evalue": "Entry is not defined",
+     "output_type": "error",
+     "traceback": [
+      "ReferenceError: Entry is not defined",
+      "    at evalmachine.<anonymous>:2:18",
+      "    at evalmachine.<anonymous>:8:3",
+      "    at Script.runInThisContext (vm.js:91:20)",
+      "    at Object.runInThisContext (vm.js:298:38)",
+      "    at run ([eval]:1002:15)",
+      "    at onRunRequest ([eval]:829:18)",
+      "    at onMessage ([eval]:789:13)",
+      "    at process.emit (events.js:182:13)",
+      "    at emit (internal/child_process.js:812:12)",
+      "    at process._tickCallback (internal/process/next_tick.js:63:19)"
+     ]
+    }
+   ],
    "source": [
     "(async () => {\n",
     "    var entry3 = await Entry.create(ipfs, testIdentityC, 'C', 'entry3', [])\n",
@@ -434,18 +600,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Cannot read property 'length' of undefined",
+     "output_type": "error",
+     "traceback": [
+      "evalmachine.<anonymous>:1",
+      "log3.length",
+      "     ^",
+      "",
+      "TypeError: Cannot read property 'length' of undefined",
+      "    at evalmachine.<anonymous>:1:6",
+      "    at Script.runInThisContext (vm.js:91:20)",
+      "    at Object.runInThisContext (vm.js:298:38)",
+      "    at run ([eval]:1002:15)",
+      "    at onRunRequest ([eval]:829:18)",
+      "    at onMessage ([eval]:789:13)",
+      "    at process.emit (events.js:182:13)",
+      "    at emit (internal/child_process.js:812:12)",
+      "    at process._tickCallback (internal/process/next_tick.js:63:19)"
+     ]
+    }
+   ],
    "source": [
     "log3.length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Cannot read property 'clock' of undefined",
+     "output_type": "error",
+     "traceback": [
+      "evalmachine.<anonymous>:1",
+      "log3.clock",
+      "     ^",
+      "",
+      "TypeError: Cannot read property 'clock' of undefined",
+      "    at evalmachine.<anonymous>:1:6",
+      "    at Script.runInThisContext (vm.js:91:20)",
+      "    at Object.runInThisContext (vm.js:298:38)",
+      "    at run ([eval]:1002:15)",
+      "    at onRunRequest ([eval]:829:18)",
+      "    at onMessage ([eval]:789:13)",
+      "    at process.emit (events.js:182:13)",
+      "    at emit (internal/child_process.js:812:12)",
+      "    at process._tickCallback (internal/process/next_tick.js:63:19)"
+     ]
+    }
+   ],
    "source": [
     "log3.clock"
    ]
